# git_auction_demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPLETE_DEPLOYMENT_GUIDE.md  FIX_GITHUB_SECRETS.md  Makefile  QUICK_FIX_NO_GITHUB_CLI.md  README.md
lambda/phobos/: .dockerignore  Dockerfile  fly.toml  pyproject.toml  requirements.txt
lambda/phobos/app/: __init__.py  main.py  main_mangum.py  main_uvicorn.py
lambda/phobos/app/api/: router.py
lambda/phobos/app/api/controller/advance/: advance_controller.py
lambda/phobos/app/api/controller/appraiser/: appraiser_controller.py
lambda/phobos/app/api/controller/bank/: bank_controller.py
lambda/phobos/app/api/controller/branch/: branch_controller.py
lambda/phobos/app/api/dao/: advance_dao.py  appraiser_dao.py  bank_dao.py  branch_dao.py  dao.py  reappraisal_service_dao.py  reimbursement_dao.py
lambda/phobos/app/api/db_connection/: db_config.py  db_connection.py
lambda/phobos/app/api/environments/: test.env.example
lambda/phobos/app/api/exceptions/: advance_exception.py  advance_settlement_exception.py  api_error_codes.py  api_exception.py  appraiser_exception.py  bank_exception.py  branch_exception.py  charge_settlement_exception.py  etl_exception.py  payout_cycle_exception.py  payout_statement_exception.py  reappraisal_service_exception.py  reimbursement_settlement_exception.py  reimbursment_exception.py  searchfilter_exception.py
lambda/phobos/app/api/repository/: branch_API_repository.py  s3_repository.py
lambda/phobos/app/api/server/: app.py
lambda/phobos/app/api/utils/: epoch.py
(+68 files in other folders)
