[project]
name = "phobos-backend"
version = "1.0.0"
description = "Production-ready FastAPI Lambda backend with comprehensive business logic and database integration"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI and Lambda
    "fastapi>=0.116.1",
    "mangum>=0.19.0",
    "pydantic>=2.7.1",
    "uvicorn[standard]>=0.35.0",

    # Database and SQL
    "sqlmodel>=0.0.24",
    "aiomysql>=0.2.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",

    # AWS and Cloud Services
    "boto3==1.40.25",

    # Environment and Configuration
    "python-dotenv>=1.1.1",
    "dotenv>=0.9.9",

    # File Handling and Reports
    "python-multipart==0.0.20",
    "reportlab>=4.4.4",

    # HTTP Client
    "httpx>=0.28.1",

    # Development / Formatting / Misc
    "black>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.28.1",
    "black>=25.1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
